# absolute_drone_localization

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: visual_localization.yaml
launch/: visual_localization.launch.py
resource/: visual_localization
scripts/: main.py  tms_downloader.py
src/svl/: ros2_node.py
src/svl/localization/: drone_streamer.py  map_reader.py  pipeline.py  preprocessing.py
src/svl/utils/: constants.py
tuning/: analyze_tuning_results_strict.py  tune_visual_localization.py
