<?xml version="1.0"?>
<package format="3">
  <name>visual_localization</name>
  <version>0.1.0</version>
  <description>Visual localization for UAVs using satellite imagery, packaged as a ROS 2 Python package.</description>
  <maintainer email="hacene.terbouche@gmail.com">TERBOUCHE Hacene</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
